<resources>
    <string name="app_name">FakeLoginApp</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="to_continue">TO CONTINUE</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log in</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">sign up</string>
    <string name="for_your_account">for your account</string>
    <string name="name">name</string>
</resources>